--- a/postgres-vault-example/deploy.yaml
+++ b/postgres-vault-example/deploy.yaml
@@ -1,15 +1,4 @@
 ---
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: spring-boot-postgres-properties
-data:
-  application.properties: |-
-    spring.datasource.url=jdbc:postgresql://postgresql:5432/testdb
-    spring.datasource.username=postgres
-    spring.datasource.password=password
-    spring.jpa.hibernate.ddl-auto=create
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -23,6 +12,19 @@ spec:
     metadata:
       labels:
         app: spring-boot-postgres
+      annotations:
+        vault.hashicorp.com/agent-inject: "true"
+        vault.hashicorp.com/role: "example"
+
+        vault.hashicorp.com/secret-volume-path-application-properties: "/deployments/config"
+        vault.hashicorp.com/agent-inject-secret-application-properties: "secret/data/myapp/config"
+        vault.hashicorp.com/agent-inject-template-application-properties: |-
+          {{- with secret "secret/myapp/config" -}}
+          spring.datasource.url=jdbc:postgresql://postgresql:5432/testdb
+          spring.datasource.username={{ .Data.data.username }}
+          spring.datasource.password={{ .Data.data.password }}
+          spring.jpa.hibernate.ddl-auto=create
+          {{- end }}
     spec:
       containers:
         - name: main
@@ -31,13 +33,7 @@ spec:
             httpGet:
               path: /actuator/health
               port: 8080
-          volumeMounts:
-            - name: application-properties
-              mountPath: /deployments/config
-      volumes:
-        - name: application-properties
-          configMap:
-            name: spring-boot-postgres-properties
+      serviceAccountName: vault-auth
 ---
 apiVersion: v1
 kind: Service
