method 1 is working. Can now run inotify as a sidecar to auto-refresh the connection pool

--- a/postgres-values.yaml
+++ b/postgres-values.yaml
@@ -1,5 +1,7 @@
 postgresqlUsername: postgres
 postgresqlPassword: password
-postgresqlDatabase: testdb
+postgresqlDatabase: widget
 service:
-  type: NodePort
+  type: ClusterIP
+persistence:
+  enabled: false
