--- a/postgres-vault-example/Dockerfile
+++ b/postgres-vault-example/Dockerfile
@@ -2,4 +2,6 @@ FROM docker.io/openjdk:11-jre-slim
 
 COPY target/*.jar /deployments/app.jar
 
+ENV SPRING_CONFIG_LOCATION=/deployments/config/application.properties
+
 CMD ["java", "-jar", "/deployments/app.jar"]
