--- a/spring-cloud-server/pom.xml
+++ b/spring-cloud-server/pom.xml
@@ -28,6 +28,14 @@
 			<groupId>org.springframework.vault</groupId>
 			<artifactId>spring-vault-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-monitor</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
