--- a/postgres-vault-example/Dockerfile
+++ b/postgres-vault-example/Dockerfile
@@ -1,7 +1,10 @@
-FROM docker.io/openjdk:11-jre-slim
+FROM docker.io/openjdk:11-jre
 
 COPY target/*.jar /deployments/app.jar
 
 ENV SPRING_CONFIG_LOCATION=/deployments/config/application.properties
+
+RUN chown :0 -R /deployments && \
+    chmod g+rx -R /deployments
 
 CMD ["java", "-jar", "/deployments/app.jar"]
